--- a/mutation-test-report/lib/message_templates.dart.html
+++ b/mutation-test-report/lib/message_templates.dart.html
@@ -312,7 +312,7 @@ td.barBg
      <table width="100%" cellpadding="1" border="0">
      <tbody><tr>
      <td class="ItemLabel" width="10%">Current display:</td>
-     <td class="ItemText" width="35%">lib/message_templates.dart - <a href="../mutation-test-report.html">back to top</a></td>
+     <td class="ItemText" width="35%">lib\message_templates.dart - <a href="../mutation-test-report.html">back to top</a></td>
      <td width="10%"></td>
      <td class="MiddleHeader" width="15%">Detected</td>
      <td class="MiddleHeader" width="15%">Total</td>
@@ -321,7 +321,7 @@ td.barBg
 
      <tr>
      <td class="ItemLabel" width="10%">Date:</td>
-     <td class="ItemText" width="35%">2023-01-14 14:01:42.526001</td>
+     <td class="ItemText" width="35%">2023-01-15 15:06:29.398302</td>
      <td class="ItemLabel" width="10%">Mutations:</td>
      <td class="ItemReport" width="15%">5</td>
      <td class="ItemReport" width="15%">5</td>
@@ -409,7 +409,7 @@ td.barBg
 <div class="content">
 <b>Detected mutations:</b>
 <table class="mutationTable">
-<tr><td class="mutationLabel" width="10%">1 :</td><td class="mutationText" width="90%"><span class="addedLine">+     return templateValues.map((key, value) =&gt;<span class="changedTokens"> MapEntry( value.toString()),key);</span></span></td></tr></table>
+<tr><td class="mutationLabel" width="10%">1 :</td><td class="mutationText" width="90%"><span class="addedLine">+     return templateValues.map((key, value) =&gt;<span class="changedTokens"> MapEntry( value.toString()),key);</span></span></td></tr></table>
 
 </div></a><a name="59"><span class="lineNumber">      59 </span>  }</a>
 <a name="60"><span class="lineNumber">      60 </span></a>
@@ -439,7 +439,7 @@ td.barBg
 <b>Detected mutations:</b>
 <table class="mutationTable">
 <tr><td class="mutationLabel" width="10%">1 :</td><td class="mutationText" width="90%"><span class="addedLine">+       templateValues:<span class="changedTokens"> _templateValues(
-    ,values));</span></span></td></tr></table>
+    ,values));</span></span></td></tr></table>
 
 </div></a><a name="83"><span class="lineNumber">      83 </span>    );</a>
 <a name="84"><span class="lineNumber">      84 </span>  }</a>
@@ -470,7 +470,7 @@ td.barBg
 <b>Detected mutations:</b>
 <table class="mutationTable">
 <tr><td class="mutationLabel" width="10%">1 :</td><td class="mutationText" width="90%"><span class="addedLine">+       templateValues:<span class="changedTokens"> _templateValues(
-    ,values));</span></span></td></tr></table>
+    ,values));</span></span></td></tr></table>
 
 </div></a><a name="108"><span class="lineNumber">     108 </span>    );</a>
 <a name="109"><span class="lineNumber">     109 </span>  }</a>
@@ -501,7 +501,7 @@ td.barBg
 <b>Detected mutations:</b>
 <table class="mutationTable">
 <tr><td class="mutationLabel" width="10%">1 :</td><td class="mutationText" width="90%"><span class="addedLine">+       templateValues:<span class="changedTokens"> _templateValues(
-    ,values));</span></span></td></tr></table>
+    ,values));</span></span></td></tr></table>
 
 </div></a><a name="133"><span class="lineNumber">     133 </span>    );</a>
 <a name="134"><span class="lineNumber">     134 </span>  }</a>
@@ -532,7 +532,7 @@ td.barBg
 <b>Detected mutations:</b>
 <table class="mutationTable">
 <tr><td class="mutationLabel" width="10%">1 :</td><td class="mutationText" width="90%"><span class="addedLine">+       templateValues:<span class="changedTokens"> _templateValues(
-    ,values));</span></span></td></tr></table>
+    ,values));</span></span></td></tr></table>
 
 </div></a><a name="158"><span class="lineNumber">     158 </span>    );</a>
 <a name="159"><span class="lineNumber">     159 </span>  }</a>
