--- a/mutation-test-report/lib/mixin/logging.dart.html
+++ b/mutation-test-report/lib/mixin/logging.dart.html
@@ -312,7 +312,7 @@ td.barBg
      <table width="100%" cellpadding="1" border="0">
      <tbody><tr>
      <td class="ItemLabel" width="10%">Current display:</td>
-     <td class="ItemText" width="35%">lib/mixin/logging.dart - <a href="../../mutation-test-report.html">back to top</a></td>
+     <td class="ItemText" width="35%">lib\mixin\logging.dart - <a href="../../mutation-test-report.html">back to top</a></td>
      <td width="10%"></td>
      <td class="MiddleHeader" width="15%">Detected</td>
      <td class="MiddleHeader" width="15%">Total</td>
@@ -321,7 +321,7 @@ td.barBg
 
      <tr>
      <td class="ItemLabel" width="10%">Date:</td>
-     <td class="ItemText" width="35%">2023-01-14 14:01:42.528489</td>
+     <td class="ItemText" width="35%">2023-01-15 15:06:29.400853</td>
      <td class="ItemLabel" width="10%">Mutations:</td>
      <td class="ItemReport" width="15%">0</td>
      <td class="ItemReport" width="15%">0</td>
