--- a/mutation-test-report/mutation-test-report.html
+++ b/mutation-test-report/mutation-test-report.html
@@ -321,11 +321,11 @@ td.barBg
 
      <tr>
      <td class="ItemLabel" width="10%">Date:</td>
-     <td class="ItemText" width="35%">2023-01-14 14:01:42.523802</td>
+     <td class="ItemText" width="35%">2023-01-15 15:06:29.388905</td>
      <td class="ItemLabel" width="10%">Mutations:</td>
-     <td class="ItemReport" width="15%">72</td>
-     <td class="ItemReport" width="15%">100</td>
-     <td class="ItemReportMedium" width="15%">72.0 %</td>
+     <td class="ItemReport" width="15%">88</td>
+     <td class="ItemReport" width="15%">103</td>
+     <td class="ItemReportHigh" width="15%">85.4 %</td>
      </tr>
      
      <tr>
@@ -333,14 +333,14 @@ td.barBg
      <td class="ItemText" width="35%">false</td>
      <td class="ItemLabel" width="10%">Timeouts:</td>
      <td class="ItemReport" width="15%">0</td>
-     <td class="ItemReport" width="15%">100</td>
+     <td class="ItemReport" width="15%">103</td>
      <td class="ItemReportHigh" width="15%">0.0 %</td>
      </tr>
      <tr>
      <td class="ItemLabel" width="10%">Quality rating:</td>
-     <td class="ItemText" width="35%">C</td>
+     <td class="ItemText" width="35%">B</td>
      <td class="ItemLabel" width="10%">Success:</td>
-     <td class="ItemText" width="15%">false</td>
+     <td class="ItemText" width="15%">true</td>
      <td class="ItemText" width="15%"></td>
      <td class="ItemText" width="15%"></td>
      </tr>
@@ -359,7 +359,29 @@ td.barBg
      <tbody>
      <tr><td width="60%"></td><td width="10%"></td><td width="10%"></td><td width="10%"></td><td width="10%"></td></tr>
      <tr><td class="ItemHead" width="60%">Path</td><td class="ItemHead" width="30%" colspan="3">Detection rate</td><td class="ItemHead" width="10%">Timeouts</td></tr>
-<tr><td class="FileLink" width="60%"><a href="lib/message_templates.dart.html">lib/message_templates.dart</a></td>
+<tr><td class="FileLink" width="60%"><a href="lib\logger.dart.html">lib\logger.dart</a></td>
+  <td class="ItemReport" width="10%">
+  <table width="100%" cellpadding="0" border="1"><tr>
+    <td class="barHi" width="100.0%" height="10"></td>
+    <td class="barBg" width="0.0%" height="10"></td>
+  </tr></table>
+  </td>
+  <td class="ItemReportHigh" width="10%">100.0 %</td>
+  <td class="ItemReportHigh" width="10%">9 / 9</td>
+  <td class="ItemReportHigh" width="10%">0 / 9</td>
+</tr>
+<tr><td class="FileLink" width="60%"><a href="lib\messages.dart.html">lib\messages.dart</a></td>
+  <td class="ItemReport" width="10%">
+  <table width="100%" cellpadding="0" border="1"><tr>
+    <td class="barHi" width="83.14606741573034%" height="10"></td>
+    <td class="barBg" width="16.853932584269657%" height="10"></td>
+  </tr></table>
+  </td>
+  <td class="ItemReportHigh" width="10%">83.1 %</td>
+  <td class="ItemReportHigh" width="10%">74 / 89</td>
+  <td class="ItemReportHigh" width="10%">0 / 89</td>
+</tr>
+<tr><td class="FileLink" width="60%"><a href="lib\message_templates.dart.html">lib\message_templates.dart</a></td>
   <td class="ItemReport" width="10%">
   <table width="100%" cellpadding="0" border="1"><tr>
     <td class="barHi" width="100.0%" height="10"></td>
@@ -370,7 +392,7 @@ td.barBg
   <td class="ItemReportHigh" width="10%">5 / 5</td>
   <td class="ItemReportHigh" width="10%">0 / 5</td>
 </tr>
-<tr><td class="FileLink" width="60%"><a href="lib/mixin/logging.dart.html">lib/mixin/logging.dart</a></td>
+<tr><td class="FileLink" width="60%"><a href="lib\mixin\logging.dart.html">lib\mixin\logging.dart</a></td>
   <td class="ItemReport" width="10%">
   <table width="100%" cellpadding="0" border="1"><tr>
     <td class="barHi" width="100.0%" height="10"></td>
@@ -380,28 +402,6 @@ td.barBg
   <td class="ItemReportHigh" width="10%">100.0 %</td>
   <td class="ItemReportHigh" width="10%">0 / 0</td>
   <td class="ItemReportHigh" width="10%">0 / 0</td>
-</tr>
-<tr><td class="FileLink" width="60%"><a href="lib/logger.dart.html">lib/logger.dart</a></td>
-  <td class="ItemReport" width="10%">
-  <table width="100%" cellpadding="0" border="1"><tr>
-    <td class="barMed" width="62.5%" height="10"></td>
-    <td class="barBg" width="37.5%" height="10"></td>
-  </tr></table>
-  </td>
-  <td class="ItemReportMedium" width="10%">62.5 %</td>
-  <td class="ItemReportMedium" width="10%">5 / 8</td>
-  <td class="ItemReportHigh" width="10%">0 / 8</td>
-</tr>
-<tr><td class="FileLink" width="60%"><a href="lib/messages.dart.html">lib/messages.dart</a></td>
-  <td class="ItemReport" width="10%">
-  <table width="100%" cellpadding="0" border="1"><tr>
-    <td class="barMed" width="71.26436781609195%" height="10"></td>
-    <td class="barBg" width="28.735632183908052%" height="10"></td>
-  </tr></table>
-  </td>
-  <td class="ItemReportMedium" width="10%">71.3 %</td>
-  <td class="ItemReportMedium" width="10%">62 / 87</td>
-  <td class="ItemReportHigh" width="10%">0 / 87</td>
 </tr>
     </tbody>
 </table>
