--- a/mutation-test-report/mutation-test-report.html
+++ b/mutation-test-report/mutation-test-report.html
@@ -321,11 +321,11 @@ td.barBg
 
      <tr>
      <td class="ItemLabel" width="10%">Date:</td>
-     <td class="ItemText" width="35%">2023-01-15 15:06:29.388905</td>
+     <td class="ItemText" width="35%">2023-01-15 17:38:14.792343</td>
      <td class="ItemLabel" width="10%">Mutations:</td>
-     <td class="ItemReport" width="15%">88</td>
-     <td class="ItemReport" width="15%">103</td>
-     <td class="ItemReportHigh" width="15%">85.4 %</td>
+     <td class="ItemReport" width="15%">86</td>
+     <td class="ItemReport" width="15%">86</td>
+     <td class="ItemReportHigh" width="15%">100.0 %</td>
      </tr>
      
      <tr>
@@ -333,12 +333,12 @@ td.barBg
      <td class="ItemText" width="35%">false</td>
      <td class="ItemLabel" width="10%">Timeouts:</td>
      <td class="ItemReport" width="15%">0</td>
-     <td class="ItemReport" width="15%">103</td>
+     <td class="ItemReport" width="15%">86</td>
      <td class="ItemReportHigh" width="15%">0.0 %</td>
      </tr>
      <tr>
      <td class="ItemLabel" width="10%">Quality rating:</td>
-     <td class="ItemText" width="35%">B</td>
+     <td class="ItemText" width="35%">A</td>
      <td class="ItemLabel" width="10%">Success:</td>
      <td class="ItemText" width="15%">true</td>
      <td class="ItemText" width="15%"></td>
@@ -373,13 +373,13 @@ td.barBg
 <tr><td class="FileLink" width="60%"><a href="lib\messages.dart.html">lib\messages.dart</a></td>
   <td class="ItemReport" width="10%">
   <table width="100%" cellpadding="0" border="1"><tr>
-    <td class="barHi" width="83.14606741573034%" height="10"></td>
-    <td class="barBg" width="16.853932584269657%" height="10"></td>
+    <td class="barHi" width="100.0%" height="10"></td>
+    <td class="barBg" width="0.0%" height="10"></td>
   </tr></table>
   </td>
-  <td class="ItemReportHigh" width="10%">83.1 %</td>
-  <td class="ItemReportHigh" width="10%">74 / 89</td>
-  <td class="ItemReportHigh" width="10%">0 / 89</td>
+  <td class="ItemReportHigh" width="10%">100.0 %</td>
+  <td class="ItemReportHigh" width="10%">72 / 72</td>
+  <td class="ItemReportHigh" width="10%">0 / 72</td>
 </tr>
 <tr><td class="FileLink" width="60%"><a href="lib\message_templates.dart.html">lib\message_templates.dart</a></td>
   <td class="ItemReport" width="10%">
